--- a/main.html
+++ b/main.html
@@ -4,12 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Styled Table</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- add table here -->
-
+<table>
+    <caption>Student Grades</caption>
+    <thead>
+      <tr>
+        <th>Roll No</th>
+        <th>Name</th>
+        <th>Subject</th>
+        <th>Marks</th>
+        <th>Grade</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>101</td>
+        <td>Alice</td>
+        <td>Mathematics</td>
+        <td>95</td>
+        <td>A+</td>
+      </tr>
+      <tr>
+        <td>102</td>
+        <td>Bob</td>
+        <td>Science</td>
+        <td>88</td>
+        <td>A</td>
+      </tr>
+      <tr>
+        <td>103</td>
+        <td>Charlie</td>
+        <td>English</td>
+        <td>72</td>
+        <td>B</td>
+      </tr>
+      <tr>
+        <td>104</td>
+        <td>Diana</td>
+        <td>History</td>
+        <td>81</td>
+        <td>A</td>
+      </tr>
+      <tr>
+        <td>105</td>
+        <td>Edward</td>
+        <td>Computer Science</td>
+        <td>99</td>
+        <td>A+</td>
+      </tr>
+    </tbody>
+  </table>
         
 </body>
 </html>
